# nycu-deep-learning-2023-spring

./: .gitignore  docker_run.bash
Docker/cuda11.7-ubuntu22.04/: Dockerfile  build.bash  run.bash
lab1/src/: 4a_learn_rate_dissusion.ipynb  4b_neuron_num_disscussion.ipynb  4c_activation_disscusion.ipynb  4d_biased_parameter.ipynb  5a_other_optimizer.ipynb  5b_other_act_fcn.ipynb  main.py  simple_test_linear.ipynb  simple_test_xor.ipynb
lab2/: CMakeLists.txt
lab2/script/: demo.bash
lab2/src/: 2048-1.cpp  2048-2.cpp  2048-3.cpp  2048_sample.cpp  plot.py  plot_comparasion.py
lab3/log/: 2023-04-09-23-45-23.csv  2023-04-09-23-45-23.yaml  2023-04-10-00-34-19.csv  2023-04-10-00-34-19.yaml  2023-04-10-00-37-40.csv  2023-04-10-00-37-40.yaml  2023-04-10-00-41-31.csv  2023-04-10-00-41-31.yaml  2023-04-10-00-48-34.csv  2023-04-10-00-48-34.yaml  2023-04-10-00-54-33.csv  2023-04-10-00-54-33.yaml  2023-04-10-01-01-37.csv  2023-04-10-01-01-37.yaml  2023-04-11-01-56-25.csv  2023-04-11-01-56-25.yaml  2023-04-11-01-59-38.csv  2023-04-11-01-59-38.yaml  2023-04-11-02-02-51.csv  2023-04-11-02-02-51.yaml  2023-04-11-02-06-07.csv  2023-04-11-02-06-07.yaml  2023-04-11-02-12-02.csv  2023-04-11-02-12-02.yaml  2023-04-11-02-17-58.csv  2023-04-11-02-17-58.yaml
lab3/script/: demo.bash  train_no_weight_decay.bash  train_weight_decay.bash
lab3/src/: dataloader.py  deepconv.py  eegnet.py  logger.py  main.py  plot.py  plot_loss.py  trainner.py
lab3/weights/: 2023-04-09-23-45-23.pt  2023-04-09-23-45-23.yaml  2023-04-10-00-34-19.pt  2023-04-10-00-34-19.yaml  2023-04-10-00-37-40.pt  (+21 more)
